--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 /.gradle
 /src/android/.cxx
 /noods
+/NooDS.app
+/NooDS.dmg
 /noods.elf
 /noods.nacp
 /noods.nro
 /noods.ini
-/NooDS.app
-NooDS.dmg
 bios7.bin
 bios9.bin
 firmware.bin
