Initial Vita port UI is barebones, but most things are implemented aside from that. Settings can be changed in the ini file for now.

--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -90,6 +90,30 @@ jobs:
         name: noods-switch
         path: noods.nro
 
+  build-vita:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Install Vita SDK
+      run: |
+        git clone https://github.com/vitasdk/vdpm
+        cd vdpm
+        ./bootstrap-vitasdk.sh
+        ./install-all.sh
+      env:
+        VITASDK: /usr/local/vitasdk
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Compile
+      run: make -f Makefile.vita -j$(nproc)
+      env:
+        VITASDK: /usr/local/vitasdk
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: noods-vita
+        path: noods.vpk
+
   build-android:
     runs-on: ubuntu-latest
 
@@ -112,7 +136,7 @@ jobs:
 
   update-release:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-mac, build-windows, build-switch, build-android]
+    needs: [build-linux, build-mac, build-windows, build-switch, build-vita, build-android]
 
     steps:
     - name: Delete old release
