--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
 /build
 /build-switch
+/build-vita
 /build-android
 /.gradle
 /src/android/.cxx
+/eboot.bin
 /noods
 /NooDS.app
 /NooDS.dmg
 /noods.elf
 /noods.nacp
 /noods.nro
+/noods.velf
+/noods.vpk
 /noods.ini
+/param.sfo
 bios7.bin
 bios9.bin
 firmware.bin
