--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -81,7 +81,8 @@ jobs:
       run: |
         sudo dkp-pacman -Rs devkitA64 devkitA64-gdb devkita64-rules --noconfirm
         wget "https://wii.leseratte10.de/devkitPro/devkitA64/r14 (2019-12)/devkitA64-r14-3-linux.pkg.tar.xz"
-        sudo dkp-pacman -U devkitA64-r14-3-linux.pkg.tar.xz --noconfirm
+        wget "https://wii.leseratte10.de/devkitPro/switch/switch-mesa-20.1.0-1-any.pkg.tar.xz"
+        sudo dkp-pacman -U devkitA64-r14-3-linux.pkg.tar.xz switch-mesa-20.1.0-1-any.pkg.tar.xz --noconfirm
     - name: Compile
       run: make -f Makefile.switch -j$(nproc)
     - name: Upload
