--- a/Makefile.vita
+++ b/Makefile.vita
@@ -3,7 +3,7 @@ BUILD   := build-vita
 SOURCES := src src/common src/vita
 ARGS    := -Ofast -flto -std=c++11 #-DDEBUG
 LIBS    := -Wl,-q -Wl,--whole-archive -lpthread -Wl,--no-whole-archive -lvita2d -lSceAppMgr_stub -lSceAudio_stub -lSceCommonDialog_stub \
-           -lSceCtrl_stub -lSceDisplay_stub -lSceGxm_stub -lSceRegistryMgr_stub -lSceSysmodule_stub -lScePgf_stub -lSceTouch_stub
+           -lSceCtrl_stub -lSceDisplay_stub -lSceGxm_stub -lSceRegistryMgr_stub -lSceSysmodule_stub -lScePgf_stub -lSceTouch_stub -lScePower_stub
 
 APPNAME := NooDS
 TITLEID := NOODSVITA
