--- a/com.hydra.noods.desktop
+++ b/com.hydra.noods.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=NooDS
 Comment=A (hopefully!) speedy NDS emulator
 GenericName=Nintendo DS Emulator
-Icon=noods
+Icon=com.hydra.noods
 Exec=noods %U
 StartupNotify=true
 Terminal=false
