--- a/com.hydra.noods.yml
+++ b/com.hydra.noods.yml
@@ -9,7 +9,7 @@ finish-args:
   - --share=ipc
   - --socket=x11
   - --socket=pulseaudio
-  - --filesystem=host:ro
+  - --filesystem=host
 
 modules:
   - name: wxwidgets
