Update resource/info files for wxWidgets hiDPI
* Include the wxMSW manifest on Windows, which enables high DPI support,
  along with themed controls in dialogs
* Set NSPrincipalClass on macOS to wxNSApplication, which according to
  the documentation is needed for correct high DPI support
* Remove NSRequiresAquaSystemAppearance key which was used to force
  light mode on macOS as wxWidgets 3.0 didn't properly support dark mode

--- a/Info.plist
+++ b/Info.plist
@@ -32,8 +32,8 @@
     <string>Licensed under GPLv3</string>
     <key>NSSupportsAutomaticGraphicsSwitching</key>
     <true/>
-    <key>NSRequiresAquaSystemAppearance</key>
-    <true/>
+    <key>NSPrincipalClass</key>
+    <string>wxNSApplication</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>This app requires microphone access to emulate the DS microphone.</string>
     <key>CFBundleDocumentTypes</key>
