--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.hydra.noods">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
