--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
@@ -13,7 +14,8 @@
 
         <activity android:name=".FileBrowser"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden">
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
