--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "com.android.application"
 android {
     buildDir = "../../build-android"
     android.ndkVersion "22.1.7171670"
-    compileSdkVersion 29
+    compileSdkVersion 33
 
     sourceSets {
         main {
@@ -16,7 +16,7 @@ android {
     defaultConfig {
         applicationId "com.hydra.noods"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 33
         versionCode 1
         versionName "0.1"
     }
@@ -40,4 +40,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.0'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
 }
